Debugging routes & templates.

--- a/ui/templates/pages/client-update.tmpl
+++ b/ui/templates/pages/client-update.tmpl
@@ -110,7 +110,7 @@
         </div>
 
         <div class="action-buttons">
-            <a href="/client/list" class="button cancel-button">Annuler</a>
+            <a href="/client/{{ .Form.ID }}" class="button cancel-button">Annuler</a>
             <button type="submit" class="button update-button">Mettre à jour</button>
         </div>
     </form>
