--- a/ui/templates/partials/transaction-list.tmpl
+++ b/ui/templates/partials/transaction-list.tmpl
@@ -1,6 +1,6 @@
-{{define "client-list"}}
+{{define "transaction-list"}}
 
-    {{/*Client List*/}}
+    {{/*Transaction List*/}}
     <div class="transaction-list">
 
         {{ range . }}
