Debugging routes & templates.

--- a/ui/templates/pages/car-catalog.tmpl
+++ b/ui/templates/pages/car-catalog.tmpl
@@ -6,7 +6,7 @@
                 <h1 class="car-title">{{ .CarCatalog.Make }} {{ .CarCatalog.Model }}</h1>
             </div>
             <div class="action-buttons">
-                <a href="/search" class="button back-button">Retour</a>
+                <a href="/dashboard" class="button back-button">Retour</a>
                 <a href="/car-catalog/{{ .CarCatalog.CatID }}/update" class="button edit-button">Modifier</a>
                 <a href="/car-catalog/{{ .CarCatalog.CatID }}/delete" class="button delete-button">Supprimer</a>
             </div>
