--- a/ui/templates/pages/car-product-create.tmpl
+++ b/ui/templates/pages/car-product-create.tmpl
@@ -202,7 +202,7 @@
         </div>
 
         <div class="action-buttons">
-            <a href="/search" class="button cancel-button">Annuler</a>
+            <a href="/dashboard" class="button cancel-button">Annuler</a>
             <button type="submit" class="button create-button">Créer</button>
         </div>
     </form>
