--- a/ui/templates/pages/car-product-update.tmpl
+++ b/ui/templates/pages/car-product-update.tmpl
@@ -198,7 +198,7 @@
                     <button type="button" class="button delete-button" onclick="if(confirm('Êtes-vous sûr de vouloir supprimer ce véhicule ?')) window.location.href='/car-product/{{ .Form.ID }}/delete'">Supprimer</button>
                 </div>
                 <div class="right-buttons">
-                    <a href="/search" class="button cancel-button">Annuler</a>
+                    <a href="/dashboard" class="button cancel-button">Annuler</a>
                     <button type="submit" class="button save-button">Enregistrer</button>
                 </div>
             </div>
