--- a/ui/templates/pages/car-product.tmpl
+++ b/ui/templates/pages/car-product.tmpl
@@ -7,7 +7,7 @@
                 <span class="car-status status-onsale">{{ .CarProduct.Status }}</span>
             </div>
             <div class="action-buttons">
-                <a href="/search" class="button back-button">Retour</a>
+                <a href="/dashboard" class="button back-button">Retour</a>
                 <a href="/car-product/{{ .CarProduct.ID }}/update" class="button edit-button">Modifier</a>
                 <a href="/car-product/{{ .CarProduct.ID }}/delete" class="button delete-button">Supprimer</a>
             </div>
