--- a/ui/templates/pages/client.tmpl
+++ b/ui/templates/pages/client.tmpl
@@ -71,7 +71,7 @@
             </div>
 
             <div class="action-buttons">
-                <a href="/search" class="button back-button">Retour</a>
+                <a href="/dashboard" class="button back-button">Retour</a>
                 <a href="/client/{{ .Client.ID }}/update" class="button edit-button">Modifier</a>
             </div>
         </div>
