--- a/ui/templates/pages/search.tmpl
+++ b/ui/templates/pages/search.tmpl
@@ -10,19 +10,19 @@
             <button type="submit" class="search-button">Rechercher</button>
         </form>
 
-        <div class="search-filters">
-            <select class="filter-select" name="type">
-                <option value="">Tous les types</option>
-                <option value="cars">Véhicules</option>
-                <option value="clients">Clients</option>
-                <option value="transactions">Transactions</option>
-            </select>
-            <select class="filter-select" name="sort">
-                <option value="id">ID</option>
-                <option value="created_at">Date de création</option>
-                <option value="updated_at">Date de modification</option>
-            </select>
-        </div>
+{{/*         <div class="search-filters"> */}}
+{{/*             <select class="filter-select" name="type"> */}}
+{{/*                 <option value="">Tous les types</option> */}}
+{{/*                 <option value="cars">Véhicules</option> */}}
+{{/*                 <option value="clients">Clients</option> */}}
+{{/*                 <option value="transactions">Transactions</option> */}}
+{{/*             </select> */}}
+{{/*             <select class="filter-select" name="sort"> */}}
+{{/*                 <option value="id">ID</option> */}}
+{{/*                 <option value="created_at">Date de création</option> */}}
+{{/*                 <option value="updated_at">Date de modification</option> */}}
+{{/*             </select> */}}
+{{/*         </div> */}}
 
         <div class="results-grid">
             {{/*             Car Results              */}}
