Debugging routes & templates, Update README.

--- a/ui/templates/pages/car-catalog-update.tmpl
+++ b/ui/templates/pages/car-catalog-update.tmpl
@@ -13,7 +13,7 @@
             {{ range .Form.NonFieldErrors }}
                 <div class="error-message">{{ . }}</div>
             {{ end }}
-            <input type="hidden" name="cat_id" value="{{ .Form.ID }}">
+            <input type="hidden" name="id" value="{{ .Form.ID }}">
 
             <div class="form-section">
                 <h2>Informations Catalogue</h2>
