--- a/ui/templates/partials/car-product-list.tmpl
+++ b/ui/templates/partials/car-product-list.tmpl
@@ -7,7 +7,7 @@
 
             <div class="car-card">
                 <div class="car-header">
-                    <div class="car-title">{{ with .Make }}{{ . }}{{ end }}{{ with .Model }}{{ . }}{{ end }}</div>
+                    <div class="car-title">{{ with .Make }}{{ . }}{{ end }} {{ with .Model }}{{ . }}{{ end }}</div>
                     <div class="car-status processing">{{ with .Status }}{{ . }}{{ end }}</div>
                 </div>
                 <div class="car-info">
@@ -29,9 +29,9 @@
                     <div>Ajoutée le: {{ humanDate .CreatedAt }}</div>
                 </div>
                 <div class="car-actions">
-                    <a href="/car/{{ .ID }}" class="action-button view-button">Voir</a>
-                    <a href="/car/update/{{ .ID }}" class="action-button edit-button">Modifier</a>
-                    <a href="/car/delete/{{ .ID }}" class="action-button delete-button">Supprimer</a>
+                    <a href="/car-product/{{ .ID }}" class="action-button view-button">Voir</a>
+                    <a href="/car-product/update/{{ .ID }}" class="action-button edit-button">Modifier</a>
+                    <a href="/car-product/delete/{{ .ID }}" class="action-button delete-button">Supprimer</a>
                 </div>
             </div>
 
