Debugging routes & templates.

--- a/ui/templates/pages/dashboard.tmpl
+++ b/ui/templates/pages/dashboard.tmpl
@@ -112,10 +112,10 @@
                     </div>
                 </div>
 
-                <h2 style="margin-top: 2rem;">Performance des Ventes</h2>
-                <div class="chart-container">
-                    [Graphique des ventes mensuelles]
-                </div>
+{{/*                 <h2 style="margin-top: 2rem;">Performance des Ventes</h2> */}}
+{{/*                 <div class="chart-container"> */}}
+{{/*                     [Graphique des ventes mensuelles] */}}
+{{/*                 </div> */}}
             </div>
 
             <div class="section">
@@ -144,10 +144,10 @@
                     </div>
                 </div>
 
-                <h2 style="margin-top: 2rem;">Véhicules Populaires</h2>
-                <div class="chart-container">
-                    [Graphique des modèles les plus consultés]
-                </div>
+{{/*                 <h2 style="margin-top: 2rem;">Véhicules Populaires</h2> */}}
+{{/*                 <div class="chart-container"> */}}
+{{/*                     [Graphique des modèles les plus consultés] */}}
+{{/*                 </div> */}}
             </div>
         </div>
     </div>
