--- a/ui/templates/partials/car-product-list.tmpl
+++ b/ui/templates/partials/car-product-list.tmpl
@@ -30,8 +30,8 @@
                 </div>
                 <div class="car-actions">
                     <a href="/car-product/{{ .ID }}" class="action-button view-button">Voir</a>
-                    <a href="/car-product/update/{{ .ID }}" class="action-button edit-button">Modifier</a>
-                    <a href="/car-product/delete/{{ .ID }}" class="action-button delete-button">Supprimer</a>
+                    <a href="/car-product/{{ .ID }}/update" class="action-button edit-button">Modifier</a>
+                    <a href="/car-product/{{ .ID }}/delete" class="action-button delete-button">Supprimer</a>
                 </div>
             </div>
 
