--- a/ui/templates/partials/client-list.tmpl
+++ b/ui/templates/partials/client-list.tmpl
@@ -27,8 +27,8 @@
                 </div>
                 <div class="client-actions">
                     <a href="/client/{{ .ID }}" class="action-button view-button">Voir</a>
-                    <a href="/client/update/{{ .ID }}" class="action-button edit-button">Modifier</a>
-                    <a href="/client/delete/{{ .ID }}" class="action-button delete-button">Supprimer</a>
+                    <a href="/client/{{ .ID }}/update" class="action-button edit-button">Modifier</a>
+                    <a href="/client/{{ .ID }}/delete" class="action-button delete-button">Supprimer</a>
                 </div>
             </div>
 
